add add new scripts for voting, add new html pages

--- a/animal.html
+++ b/animal.html
@@ -10,9 +10,9 @@
   <body>
     <div class="container">
       <ul class="nav nav-tabs">
-        <li role="presentation" class="active"><a href="index.html">Drinks</a></li>
+        <li role="presentation"><a href="index.html">Drinks</a></li>
         <li role="presentation"><a href="voting.html">Voting Information</a></li>
-        <li role="presentation"><a href="animal.html">Animal Wiki</a></li>
+        <li role="presentation" class="active"><a href="animal.html">Animal Wiki</a></li>
         <li role="presentation"><a href="park.html">Amusement Park</a></li>
       </ul>
       <div class="well">
