--- a/voting.html
+++ b/voting.html
@@ -10,36 +10,33 @@
   <body>
     <div class="container">
       <ul class="nav nav-tabs">
-        <li role="presentation" class="active"><a href="index.html">Drinks</a></li>
-        <li role="presentation"><a href="voting.html">Voting Information</a></li>
+        <li role="presentation"><a href="index.html">Drinks</a></li>
+        <li role="presentation" class="active"><a href="voting.html">Voting Information</a></li>
         <li role="presentation"><a href="animal.html">Animal Wiki</a></li>
         <li role="presentation"><a href="park.html">Amusement Park</a></li>
       </ul>
       <div class="well">
-        <div id="drinks">
-          <h1>Drink menu</h1>
+        <div id="voting">
+          <h1>Voting</h1>
 
-          <h2>Beer</h2>
+          <h2>Information:</h2>
           <ul>
             <li>The King of Beer</li>
             <li>The Queen of Beer</li>
             <li>Real cold beer</li>
           </ul>
 
-          <h2>Wine</h2>
+          <h2>Upcoming Elections:</h2>
           <ul>
             <li>Red wine</li>
             <li>White wine</li>
             <li>Blue wine</li>
           </ul>
         </div>
-      </div>
+        <div id="under-18">
+          <h1>Here are some links to learn about voting and the American Election system.</h1>
 
-      <div class="well">
-        <div id="under-21">
-          <h1>Sorry, we can't serve you.</h1>
-
-          <p>It's illegal in the US. Try Mexico or Europe.</p>
+          <p>Here we are!</p>
         </div>
       </div>
     </div>
