--- a/animal.html
+++ b/animal.html
@@ -4,8 +4,8 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/scripts.js"></script>
-    <title>Drinks</title>
+    <script src="js/animals.js"></script>
+    <title>Animal Wiki</title>
   </head>
   <body>
     <div class="container">
@@ -16,30 +16,43 @@
         <li role="presentation"><a href="park.html">Amusement Park</a></li>
       </ul>
       <div class="well">
-        <div id="drinks">
-          <h1>Drink menu</h1>
-
-          <h2>Beer</h2>
-          <ul>
-            <li>The King of Beer</li>
-            <li>The Queen of Beer</li>
-            <li>Real cold beer</li>
-          </ul>
-
-          <h2>Wine</h2>
-          <ul>
-            <li>Red wine</li>
-            <li>White wine</li>
-            <li>Blue wine</li>
-          </ul>
+        <div class="radio">
+          <label>
+            <input type="radio" name="animal" value="Frogs" checked>
+            Frogs
+          </label>
         </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="animal" value="Snakes">
+            Snakes
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="animal" value="Insects">
+            Insects
+          </label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit!</button>
+
       </div>
 
       <div class="well">
-        <div id="under-21">
-          <h1>Sorry, we can't serve you.</h1>
+        <div id="frogs">
+          <h1>Frogs</h1>
 
-          <p>It's illegal in the US. Try Mexico or Europe.</p>
+          <p>Frogs toads etc.</p>
+        </div>
+        <div id="snakes">
+          <h1>Snakes</h1>
+
+          <p>Slitherin</p>
+        </div>
+        <div id="insects">
+          <h1>Bugs</h1>
+
+          <p>Bugs blah blah.</p>
         </div>
       </div>
     </div>
