--- a/voting.html
+++ b/voting.html
@@ -5,7 +5,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Drinks</title>
+    <title>Voting</title>
   </head>
   <body>
     <div class="container">
@@ -35,10 +35,9 @@
         </div>
         <div id="under-18">
           <h1>Here are some links to learn about voting and the American Election system.</h1>
-
           <p>Here we are!</p>
         </div>
-      </div>
-    </div>
+      </div> <!---end of well-->
+    </div> <!---end of container-->
   </body>
 </html>
