add pictures, add stylings for pics, add content

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <h1>Drink menu</h1>
 
           <h2>Beer</h2>
+          <img src="img/drinks.jpg">
           <ul>
             <li>The King of Beer</li>
             <li>The Queen of Beer</li>
@@ -27,6 +28,7 @@
           </ul>
 
           <h2>Wine</h2>
+          <img src="img/wine.jpg">
           <ul>
             <li>Red wine</li>
             <li>White wine</li>
