--- a/animal.html
+++ b/animal.html
@@ -20,6 +20,7 @@
       </div>
       <div class="well">
         <form id="radio">
+          <h1>Select an animal</h1>
           <div class="radio">
             <label>
               <input type="radio" name="animal" value="Frogs">
@@ -28,7 +29,7 @@
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="animal" value="Snakes" checked>
+              <input type="radio" name="animal" value="Snakes">
               Snakes
             </label>
           </div>
@@ -38,26 +39,32 @@
               Insects
             </label>
           </div>
-          <button type="submit" class="btn btn-primary">Submit!</button>
+          <button type="submit" class="btn btn-primary">Show me!</button>
         </form>
-
       </div>
-
       <div class="well">
-        <div id="frogs">
-          <h1>Frogs</h1>
-
-          <p>Frogs toads etc.</p>
-        </div>
-        <div id="snakes">
-          <h1>Snakes</h1>
-
-          <p>Slitherin</p>
-        </div>
-        <div id="insects">
-          <h1>Bugs</h1>
-
-          <p>Bugs blah blah.</p>
+        <div class="center">
+          <div id="frogs">
+            <h1>Frogs</h1>
+            <img src="img/frogs.jpg">
+            <h2>Beautiful Frogs</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac neque imperdiet, consequat leo nec, dapibus risus. Pellentesque tincidunt felis a enim hendrerit, vitae hendrerit ligula dignissim. Vestibulum pellentesque libero eget sem egestas, id consectetur massa molestie. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur in venenatis mauris. Curabitur lorem urna, aliquet vel volutpat eleifend, interdum vitae neque. Fusce vel ipsum a justo ultrices accumsan. Morbi rutrum odio ac ornare rhoncus. Mauris tempus faucibus justo ac varius.</p>
+            <p>Donec vehicula orci odio, quis consequat odio imperdiet vitae. Donec condimentum ultricies nisi volutpat ultrices. Nulla nulla metus, semper vitae faucibus bibendum, ultricies nec arcu. Vestibulum laoreet quis sapien in gravida. Aliquam posuere, quam ut porta malesuada, elit odio semper magna, sed feugiat ligula arcu sit amet mauris. Suspendisse dignissim felis non urna tincidunt, id hendrerit massa efficitur. Suspendisse nec eros dolor. Maecenas in mi at arcu dapibus ullamcorper ac vel velit.</p>
+          </div>
+          <div id="snakes">
+            <h1>Snakes</h1>
+            <img src="img/snakes.jpg">
+            <h2>Slitherin' Snakes</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac neque imperdiet, consequat leo nec, dapibus risus. Pellentesque tincidunt felis a enim hendrerit, vitae hendrerit ligula dignissim. Vestibulum pellentesque libero eget sem egestas, id consectetur massa molestie. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur in venenatis mauris. Curabitur lorem urna, aliquet vel volutpat eleifend, interdum vitae neque. Fusce vel ipsum a justo ultrices accumsan. Morbi rutrum odio ac ornare rhoncus. Mauris tempus faucibus justo ac varius.</p>
+            <p>Donec vehicula orci odio, quis consequat odio imperdiet vitae. Donec condimentum ultricies nisi volutpat ultrices. Nulla nulla metus, semper vitae faucibus bibendum, ultricies nec arcu. Vestibulum laoreet quis sapien in gravida. Aliquam posuere, quam ut porta malesuada, elit odio semper magna, sed feugiat ligula arcu sit amet mauris. Suspendisse dignissim felis non urna tincidunt, id hendrerit massa efficitur. Suspendisse nec eros dolor. Maecenas in mi at arcu dapibus ullamcorper ac vel velit.</p>
+          </div>
+          <div id="insects">
+            <h1>Bugs</h1>
+            <img src="img/lobster.jpg">
+            <h2>Bugs blah, blah, blah...</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac neque imperdiet, consequat leo nec, dapibus risus. Pellentesque tincidunt felis a enim hendrerit, vitae hendrerit ligula dignissim. Vestibulum pellentesque libero eget sem egestas, id consectetur massa molestie. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur in venenatis mauris. Curabitur lorem urna, aliquet vel volutpat eleifend, interdum vitae neque. Fusce vel ipsum a justo ultrices accumsan. Morbi rutrum odio ac ornare rhoncus. Mauris tempus faucibus justo ac varius.</p>
+            <p>Donec vehicula orci odio, quis consequat odio imperdiet vitae. Donec condimentum ultricies nisi volutpat ultrices. Nulla nulla metus, semper vitae faucibus bibendum, ultricies nec arcu. Vestibulum laoreet quis sapien in gravida. Aliquam posuere, quam ut porta malesuada, elit odio semper magna, sed feugiat ligula arcu sit amet mauris. Suspendisse dignissim felis non urna tincidunt, id hendrerit massa efficitur. Suspendisse nec eros dolor. Maecenas in mi at arcu dapibus ullamcorper ac vel velit.</p>
+          </div>
         </div>
       </div>
     </div>
